# blockchain-potential-carnival

./: .gitattributes  .gitignore  README.md
cheat_sheets/DE/: blockchain-consensus-cheatsheet.md  blockchain-cryptoapplications-cheatsheet.md  blockchain-fintech-cheatsheet.md  blockchain-hashing-cheatsheet.md  blockchain-overview-cheatsheet.md  blockchain-signatures-cheatsheet.md  blockchain-technical-use-cheatsheet.md  blockchain-vision-cheatsheet.md  evaluation_sheet.md
cheat_sheets/EN/: blockchain-consensus-cheatsheet.md  blockchain-cryptoapplications-cheatsheet.md  blockchain-fintech-cheatsheet.md  blockchain-hashing-cheatsheet.md  blockchain-overview-cheatsheet.md  blockchain-signatures-cheatsheet.md  blockchain-technical-use-cheatsheet.md  blockchain-vision-cheatsheet.md  blockchain_cheatsheet.md  blockchain_cheatsheet_technical_use.md  blockchain_consensus_cheatsheet.md  blockchain_hashing_cheatsheet.md  blockchain_overview_cheatsheet.md  blockchain_signatures_cheatsheet.md  (+3 more)
code/: simple_protocol.rs
code/evframework/: .gitignore  Cargo.toml  EvFramework.lnk  README.md  build.rs
code/evframework/assets/ascii/: credits.txt  evframework.txt  macroareas.txt  mainmenu.txt  scope.txt  system.txt
code/evframework/assets/ascii/macro/: blockchainspecs.txt  execution.txt  idea.txt  marketpotential.txt  team.txt  technology.txt
code/evframework/assets/md/: buffer.md
code/evframework/output/md/: buffer.md
code/evframework/src/: main.rs
code/evframework/src/lib/: easteregg.txt  evframework.txt  lib.rs  models.rs  monitor.rs  outputs.rs  terminal.rs
(+20 files in other folders)
