[package]
name = "EvFramework"
version = "0.1.0"
edition = "2021"

[dependencies]
textwrap = { version = "0.16", features = ["terminal_size"] }
crossterm = "0.28.1"
unicode-width = "0.1.13"
chrono = "0.4.38"
printpdf = "0.7.0"
webbrowser = "1.0.1"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[build-dependencies]
winres = "0.1"
